<resources>
    <string name="app_name">iPlant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back_login">Welcome back</string>
    <string name="login_description">Login to your account</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login_button_text">Login</string>
    <string name="signup_link">Don\'t have an account? <a href="">Sign up</a></string>
    <string name="register_label">Register</string>
    <string name="create_account_label">Create your new account</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="confirmation_label">By signing up you agree to our <a href="">Terms of use</a> and <a href="">privacy notice</a></string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="login_link">Already have an account? <a href="">Login</a></string>
    <string name="new_text">New text</string>
    <string name="name_placeholder">Mtemi Nasaba Bora</string>
    <string name="nickname_placeholder">Nyota ya Almasi</string>
    <string name="email_placeholder">test@chachaup.com</string>
</resources>