<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/honey_dew"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageViewBannerLogin"
        android:src="@drawable/leaves"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headerTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cal_poly_pomona_green"
        android:textSize="35sp"
        android:text="@string/welcome_back_login"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".4"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDescriptionLogin"
        android:text="@string/login_description"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".475"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_regular"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFullNameLogin"
        android:background="@drawable/edit_text_background"
        android:hint="@string/full_name_hint"
        android:textColorHint="@color/cal_poly_pomona_green"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".575"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPasswordLogin"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/cal_poly_pomona_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".675"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".75"
        app:showDividers="middle"
        app:divider="@drawable/divider">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRememberMeLogin"
            android:text="@string/remember_me"
            android:textColor="@color/cal_poly_pomona_green"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewForgotPassword"
            android:text="@string/forgot_password"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/cal_poly_pomona_green"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/login_button_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".875"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_link"
        android:textColor="@color/grey"
        android:textColorLink="@color/cal_poly_pomona_green"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".95"/>


</androidx.constraintlayout.widget.ConstraintLayout>