<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.chachaup.iplant.vm.IPlantViewModel" />

    </data>

<!--    This layout was just for testing whether the login button indeed navigates to the dashboard when required to
it implements no specific conversion of design.-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cal_poly_pomona_green"
        tools:context=".ui.DashboardFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".025"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/dp" />

            <RelativeLayout
                android:paddingHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewName"
                    android:textSize="25sp"
                    android:text="@string/name_placeholder"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewNickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname_placeholder"
                    android:textStyle="italic"
                    android:textSize="20sp"
                    android:layout_marginTop="30dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewEmail"
                    android:text="@string/email_placeholder"
                    android:layout_marginTop="60dp"
                    android:textStyle="italic"
                    android:textSize="15sp" />
            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>